# Room-Modeling

./: .gitignore  .gitmodules  README.md  export_scannet_topdown.py  export_user_ply_model_topdown.py  export_user_ply_topdown_v5.py  model_predictions_example.json  requirements.txt  room_editor.html  room_editor_1.html  room_editor_script.js  user_ply_geometry_common.py
Room-Modeling/: README.md  run_full_pipeline.py  run_full_pipeline_1.py
Room-Modeling/graph/: README.md  __init__.py  config.py  fengshui.py  functional.py  geometry.py  io.py  pyproject.toml  requirements.txt  scene_graph.py  sync_cache.py
Room-Modeling/graph/tests/: test_basic.py  test_sync_cache.py
Room-Modeling/network/: README.md  __init__.py  annotate.py  cli.py  data.py  dataset.py  eval.py  labels.py  metrics.py  model.py  pyproject.toml  requirements.txt  targets.py  train.py
Room-Modeling/network/tests/: test_targets.py
Room-Modeling/spatial/: README.md
Room-Modeling/tune/: .gitignore  README.md  __init__.py  aggregate.py  clean.py  cli.py  ingest.py  io.py  pipeline.py  pyproject.toml  rule_extract.py  vocab.py
Room-Modeling/tune/tests/: test_basic.py
Room-Modeling/visualizations/: README.md  index.html  viewer.css  viewer.js
old_implementations/: export_user_ply_topdown.py  export_user_ply_topdown_v2.py  export_user_ply_topdown_v3.py  export_user_ply_topdown_v4.py  export_user_ply_topdown_v5.py  export_user_ply_topdown_v6.py
room_graph/: README.md  pyproject.toml
room_graph/room_graph/: __init__.py  cli.py  fengshui.py  functional.py  geometry.py  io.py  types.py
room_graph/tests/: test_basic.py
spatiallm_room_editor/: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
spatiallm_room_editor/outputs/my_room/: entities.csv  layout.txt  scene.json
spatiallm_room_editor/outputs/sample_parse_only/: entities.csv  scene.json
spatiallm_room_editor/scripts/: serve_output.py
spatiallm_room_editor/spatiallm_room_editor/: pipeline.py
spatiallm_room_editor/spatiallm_room_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_out/: scene_layout.json
test_out2/: scene_layout.json
test_out3/: scene_layout.json
test_scene/: scannetv2-labels.combined.tsv
test_scene/scene0000_00/: scene0000_00.aggregation.json  (+4 more)
(+10 files in other folders)
